# routes/api/main/main-routes.js
@@ -1,10 +1,0 @@
-require("dotenv").config();
-const express = require('express');
-
-const { getAllProjectsAndPartners} = require('../../../controllers/main-controllers')
-
-const router = express.Router();
-
-router.get('/', getAllProjectsAndPartners);
-
-module.exports = router;
